--- a/lib/civil_registry_web/controllers/marriage_license_html/show.html.heex
+++ b/lib/civil_registry_web/controllers/marriage_license_html/show.html.heex
@@ -6,7 +6,7 @@
       <:subtitle>This is a marriage_license record from your database.</:subtitle>
       <:actions>
         <.link href={~p"/marriage_licenses/#{@marriage_license}/edit"}>
-          <.button>Edit marriage_license</.button>
+          <.button>Edit License</.button>
         </.link>
       </:actions>
     </.header>
