--- a/lib/civil_registry_web/controllers/marriage_license_html/new.html.heex
+++ b/lib/civil_registry_web/controllers/marriage_license_html/new.html.heex
@@ -5,4 +5,4 @@
 
 <.marriage_license_form changeset={@changeset} action={~p"/marriage_licenses"} />
 
-<.back navigate={~p"/marriage_licenses"}>Back to marriage_licenses</.back>
+<.back navigate={~p"/marriage_licenses"}>Back to licenses</.back>
