--- a/lib/civil_registry_web/controllers/marriage_license_html/show.html.heex
+++ b/lib/civil_registry_web/controllers/marriage_license_html/show.html.heex
@@ -23,7 +23,7 @@
       <:item title="Status"><%= @marriage_license.status %></:item>
     </.list>
 
-    <.back navigate={~p"/marriage_licenses"}>Back to marriage_licenses</.back>
+    <.back navigate={~p"/marriage_licenses"}>Back to licenses</.back>
     </div>
     <div class="w-1/2">
       Document .json
